--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta id="vp" name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="theme-color" content="#000000" />
     <meta
@@ -30,6 +29,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>React App</title>
+
+    <script>
+      window.onload = function() {
+          if (screen.width < 600) {
+              var mvp = document.getElementById('vp');
+              mvp.setAttribute('content','user-scalable=no,width=600');
+          }
+      }
+      </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
