--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,15 @@
           }
       }
       </script>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-G472DDWKGP"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-G472DDWKGP');
+      </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
